<resources>
    <string name="app_name">Flashlight</string>
    <string name="facebook_app_id">374991623348694</string>
    <string name="fb_login_protocol_scheme">fb374991623348694</string>

    <string name="warning_request_permission">You need to apply access to Camera to use Flashlight</string>
    <string name="warning_request_permission_sys_alert_win">You need to apply access to use Flashlight</string>

    <string name="not_support">Your device not support Flash !</string>
    <string name="not_support_compass">Your device does not support compass</string>

    <string name="request_camera">You have not apply access to Camera to use Flashlight</string>
    <string name="failed_camera">Failed to connect to Camera service</string>

    <string name="ok">OK</string>
    <string name="skip">Bỏ qua</string>
    <string name="error">Error</string>
    <string name="loading">Loading</string>
    <string name="press_back_again">Press Back again to exit</string>

    <string name="no_internet">No Internet connection</string>

    <string name="notification">Notification</string>
    <string name="update">Update</string>

    <string name="rate_title">Share and rate</string>
    <string name="rate_content">Share this app to your friend and rate 5* to support the developer</string>

    <string name="share">Share</string>
    <string name="rate">Rate</string>

    <string name="share_error">Share error !</string>
    <string name="share_cancel">Share cancelled !</string>
    <string name="share_success">Share successfully !</string>

    <string name="setting_flashlight">Setting</string>
    <string name="sound">Sound</string>
    <string name="notification_bar">Status Bar</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Do you want to turn off Flash after exiting the application ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noti_message">Let\'s see what\'s new today !</string>
    <string name="login_cancel">Login canceled</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="step_by_step">In order to turn on Flash, you follow step by step:</string>
    <string name="choose_permission">Choose Permission</string>
    <string name="camera_permission">Camera</string>
    <string name="turn_on_this_permission">Bật quyền này lên</string>

    <string name="home">Home</string>
    <string name="compass">Compass</string>
    <string name="wifi">Wifi</string>
    <string name="gprs">GPRS</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="send_success">Send feedback successfully !</string>
    <string name="send_failed">Send feedback failed, please try again</string>
    <string name="play_store">Google Play Store</string>
    <string name="write_feedback">Write feedback</string>
    <string name="write_at_least">You need to write at least 10 characters to send feedback</string>
</resources>