<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/color_bg_header"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/setting_flashlight"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/ic_sound" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/sound"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sound"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center">

                <com.rey.material.widget.Switch
                    android:id="@+id/sw_sound"
                    style="@style/Material.Widget.Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/ic_forward" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/notification_bar"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/noti_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center">

                <com.rey.material.widget.Switch
                    android:id="@+id/sw_noti_bar"
                    style="@style/Material.Widget.Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/img_share" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/img_rate"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/img_rate" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/img_feedback"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/img_feedback" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/layout_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/feedback"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/holo_blue_dark">

                <EditText
                    android:id="@+id/txt_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@android:color/white"
                    android:hint="@string/write_feedback"
                    android:imeOptions="actionDone"
                    android:inputType="textImeMultiLine"
                    android:minHeight="100dp"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/send" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/layout_adview" />
</FrameLayout>